...
                    }
                }
                .frame(maxWidth: .infinity)
                .cardStyle()
                
                VStack(alignment: .leading, spacing: 8) {
                    Text("detail_screen_about")
                        .font(.caption.bold())
                        .textCase(.uppercase)
                        .accessibilityIdentifier("detail_screen_about")
                    
                    Text(stock.description)
                        .font(.body)
...
